--- a/app/assets/stylesheets/pages/_faq.scss
+++ b/app/assets/stylesheets/pages/_faq.scss
@@ -39,7 +39,7 @@
       text-decoration: none;
       width: 100%;
       text-align: left;
-
+      outline: none;
 
       @media screen and (max-width: 767px) {
         font-size: 16px !important;
@@ -47,6 +47,12 @@
 
       &:hover {
         text-decoration: none;
+        outline: none;
+      }
+
+      &:focus {
+        text-decoration: none;
+        outline: none;
       }
     }
   }
@@ -58,8 +64,12 @@
   font-family: "Avenir";
   margin-bottom: 20px;
   padding-top: 10px;
-  font-size: 15px !important;
+  font-size: 17px !important;
   line-height: 1.7em;
+
+  @media screen and (max-width: 767px) {
+    font-size: 15px !important;
+  }
 }
 
 
