--- a/app/views/sections/_features.html.erb
+++ b/app/views/sections/_features.html.erb
@@ -26,7 +26,7 @@
             <div class="feature-title">Growth management</div>
             <div class="feature-desc">
               Our core strength is the growth. We’ve team up with the
-              best growth hacker we know to provide you the best
+              best growth hackers we know to provide you the best
               services. Get results within a week and start engage with
               all those new potential customers.
             </div>
