--- a/app/assets/stylesheets/pages/_faq.scss
+++ b/app/assets/stylesheets/pages/_faq.scss
@@ -35,7 +35,7 @@
     button {
       font-weight: 600 !important;
       font-size: 20px !important;
-      color: $gray-dark !important;
+      color: RGBA(51, 51, 51, 1.00) !important;
       text-decoration: none;
       width: 100%;
       text-align: left;
