--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -182,7 +182,7 @@
             </div>
             <div id="collapse11" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body faq-answer">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                Yes. You have 10 days to notify us. 100% money back guarantee, no questions asked.
               </div>
             </div>
           </div>
@@ -198,7 +198,7 @@
             </div>
             <div id="collapse12" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body faq-answer">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                Once the strategy is applied to your account you will see more interactions and traffic on your accoutn within 3 to 4 days.
               </div>
             </div>
           </div>
@@ -214,7 +214,7 @@
             </div>
             <div id="collapse13" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body faq-answer">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                In order to run campaign to your Instagram account we need to access your account. But don't worry we won't acces your private informations.
               </div>
             </div>
           </div>
