type discover section

--- a/app/views/sections/_features.html.erb
+++ b/app/views/sections/_features.html.erb
@@ -7,7 +7,7 @@
           <div class="mission-title">Our mission</div>
           <!-- Description -->
           <div class="mission-desc">
-            <strong>helloradius</strong> is a social media agency focus on Instagram.
+            <strong>helloradius</strong> is a social media agency focused on Instagram.
             Our goal is to increase significantly your traffic and your engagement. Saving you time is also one of our biggest concern, we want you to just focus on taking care of your community while we’re doing the rest!
             <br> We are here to coach you through your journey on Instagram.
           </div>
