--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -71,6 +71,15 @@
   }
 }
 
+// Form btn
+.form-btn {
+  margin-top: 30px;
+  padding-left: 70px;
+  padding-right: 70px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 // Button Sizing
 .btn-small {
 
