change path to contact

--- a/app/views/sections/_contact_us.html.erb
+++ b/app/views/sections/_contact_us.html.erb
@@ -4,7 +4,7 @@
       <h4 class="contact-title">Do you still have questions?  Visit our <a href="/faq" class="red-link">FAQ</a> or contact us via mail.</h4>
     </div>
     <div class="row text-center mt30">
-      <a class="secondary-btn" href="mailto:bastien@helloradius.co">Contact us</a>
+      <a class="secondary-btn" href="/contact">Contact us</a>
     </div>
   </div>
 </div>
