--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/navbar' %>
 
-<div id="contact">
+<div id="contact-page">
   <form class="contact-form" method="POST" action="https://formspree.io/bastien@helloradius.co">
     <input class="form-input" type="email" name="email" placeholder="Your email">
     <textarea class="form-input mt30" name="message" placeholder="Your message"></textarea>
