--- a/app/views/sections/_how.html.erb
+++ b/app/views/sections/_how.html.erb
@@ -29,7 +29,7 @@
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
           <%= image_tag("illu-2.svg", class: "illu-small") %>
-          <h4><strong>3.</strong> Let our expert works on your strategy.</h4>
+          <h4><strong>3.</strong> Let our experts works on your strategy.</h4>
           <p></p>
         </div>
       </div>
@@ -38,7 +38,7 @@
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
         <div class="card-how">
           <%= image_tag("illu-5.svg", class: "illu-small") %>
-          <h4><strong>4.</strong> See the magic happened...</h4>
+          <h4><strong>4.</strong> See the magic happen...</h4>
           <p></p>
         </div>
       </div>
