change path contact footer to footer page

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,7 +10,7 @@
         <li><a href="/blog">Blog</a></li>
         <li><a href="/faq">Faq</a></li>
         <li><a href="/terms">Terms and Conditions</a></li>
-        <li><a href="mailto:bastien@helloradius.co">Contact us</a></li>
+        <li><a href="/contact">Contact us</a></li>
       </ul>
     </div>
 
