--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Helloradius - Your Instagram Experts</title>
+    <title>Helloradius | Your Instagram Experts</title>
     <meta name="description" content="<%= meta_description %>">
 
     <!-- Facebook Open Graph data -->
