--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -152,7 +152,7 @@
 
           <!-- Footer Card Pricing -->
           <div class="pricing-card-footer">
-            <a href="mailto:bastien@helloradius.co" class="btn-pricing">Contact us</a>
+            <a href="/contact" class="btn-pricing">Contact us</a>
           </div>
         </div>
       </div>
