change coching to solution in featuer design

--- a/app/views/sections/_features.html.erb
+++ b/app/views/sections/_features.html.erb
@@ -91,7 +91,7 @@
         <div class="card-feature">
           <%= image_tag("feature5.png", class: "feature-icon icon-5") %>
           <div class="feature-content">
-            <div class="feature-title">Design Coaching</div>
+            <div class="feature-title">Design Solution</div>
             <div class="feature-desc">
               With a great eye of design, our UX-UI team is here to
               give the best advices to match the trends on Instagram
