--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -9,13 +9,13 @@
           <div class="pricing-montlhy">Monthly</div>
           <div class="pricing-features">
             <ul>
-              <li>
+              <li class="feature" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Growth Management</li>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Analytics Report</li>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Hashtags Research</li>
               <li class="unchecked-feature">
