add all tooltip in pricing section - still not showing

--- a/app/views/sections/_pricing.html.erb
+++ b/app/views/sections/_pricing.html.erb
@@ -9,7 +9,7 @@
           <div class="pricing-montlhy">Monthly</div>
           <div class="pricing-features">
             <ul>
-              <li class="feature" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Growth Management</li>
               <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
@@ -48,19 +48,19 @@
           <div class="pricing-montlhy">Monthly</div>
           <div class="pricing-features">
             <ul>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Growth Management</li>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Analytics Report</li>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Hashtags Research</li>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 We post for you</li>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top" data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Digital Strategy</li>
               <li class="unchecked-feature">
@@ -87,25 +87,25 @@
           <div class="pricing-montlhy">Monthly</div>
           <div class="pricing-features">
             <ul>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Growth Management</li>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Analytics Report</li>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Hashtags Research</li>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 We post for you</li>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Digital Strategy</li>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Design Solution</li>
-              <li>
+              <li data-toggle="tooltip" data-placement="top" title="Tooltip on top">
                 <i class="fas fa-check-circle circle-checked"></i>
                 Unlimited Support</li>
             </ul>
