--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -226,7 +226,8 @@
       font-family: "Avenir", sans-serif;
       font-weight: 400;
       font-size: 14px;
-      padding-top: 18px;
+      margin-top: 18px;
+      // cursor: pointer;
 
       svg {
         margin-right: 7%;
